style.css
.wrapper {
  width: 450px;
}

.body {
  display: flex;
  justify-content: center;
}

.container {
  display: flex;
  flex-direction: column;
}

/* heading */
.heading {
  font-family: 'Roboto', sans-serif;
  font-weight:lighter;
  text-align:center;
  font-size:23px;
  color: #313639;
}

/* TO DO BOX */
#todoItems {
  border:1px solid lightgrey;
  background: #fff;
  box-shadow:
    0 1px 1px rgba(0,0,0,0.15),
    0 10px 0 -5px #eee,
    0 10px 1px -4px rgba(0,0,0,0.15),
    0 20px 0 -10px #eee,
    0 20px 1px -9px rgba(0,0,0,0.15);
  padding-inline-start: 0;
}

#todoItems li {
  font-family: 'Roboto', sans-serif;
  padding: 1vw 0 0.5vw 0vw;
  list-style: none;
  border-bottom: 0.5px solid lightgrey;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

#todoTextInput {
  outline: none;
  font-size: 16px;
  font-weight: lighter;
  font-family: roboto;
  border: 1px solid white;
  width:80%;
  background-color:white;
  color: #313639;
}

#textInput {
  height: 40px;
  font-size: 16px;
  font-weight: lighter;
  font-family: 'Roboto', sans-serif;
  border: 1px solid lightgrey;
  margin-bottom: -17px;
  padding-left:2%;
  border-radius: 0px;
}

/* placeholder  */
::placeholder {
   color:lightgrey;
   font-size:16px;
   text-align: left;
}

/*  AMOUNT OF TODOS TODAY */
#todosToday {
  font-family: 'Roboto', sans-serif;
  font-size:14px;
  text-align:center;
  font-weight:lighter;
  color:#313639;
}

 /* REMOVES BLUE BORDER FROM ADD TODO BAR */
input {
  outline:none;
}

 /* DELETE BUTTON */
.deleteButton {
  border: 0px solid white;
  background-color: white;
  width: 10%;
}

/* TOGGLE */
.fas, .far, .fa-circle:before, .fa-check-circle:before {
  font-size: 20px;
  color: lightgrey;
  margin-left:3.5%;
  width:10%;
}

.fa-times:before {
  font-size:15px;
   width:10%;
}

